<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_500">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.AccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="@dimen/default_profile_size"
                android:layout_height="@dimen/default_profile_size"
                android:layout_marginTop="@dimen/default_margin"
                android:src="@drawable/img_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:background="@drawable/rating"
                android:gravity="center"
                android:text="@string/_4_7"
                android:textAppearance="@style/textViewRating"
                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="@+id/circleImageView"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="center_horizontal|top"
                android:text="@string/alice_peterson"
                android:textAppearance="@style/alice_peterson"
                android:translationY="-1.11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_rcView_margin"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_language_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_rcView_margin"
                android:layout_marginTop="24dp"
                android:text="@string/russia_english_german"
                android:textAppearance="@style/title_language"
                app:layout_constraintEnd_toStartOf="@+id/text_language_choose2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_language_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/choose"
                android:textAppearance="@style/choose_language"
                android:translationY="-0.53sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_language_choose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/choose"
                android:textAppearance="@style/choose_language"
                android:translationY="-0.53sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_rcView_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:lineSpacingExtra="1sp"
                android:text="@string/new_york_usa"
                android:textAppearance="@style/title_language"
                android:translationY="-0.53sp"
                app:layout_constraintEnd_toStartOf="@+id/text_language_choose"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/text_language" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_baseline_place_24"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/text_language" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/big_margin_20"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:itemCount="4"
                tools:listitem="@layout/item_photo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size48"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    style="@style/custom_btn"
                    android:layout_width="@dimen/size48"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/questionnaires"/>

                <Space
                    android:id="@+id/spacer"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_people"
                    style="@style/custom_btn"
                    android:layout_width="@dimen/size48"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/people"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/TextInputEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="2dp"
                android:hint="@string/about_me"
                app:counterEnabled="true"
                app:boxBackgroundColor="@color/black_500"
                app:counterMaxLength="300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:foregroundTint="@color/violet"
                    android:maxLength="300"
                    android:imeOptions="actionDone"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="@style/editTextStyle"
                    android:textColor="@color/button_text_white"
                    android:textSize="16sp"
                    tools:text="@string/quote" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dream_get"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:text="@string/dream_and_get"
                android:textAppearance="@style/dream_subtitle"
                android:translationY="-2.32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                style="@style/Switch"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/big_margin_20"
                android:layout_marginEnd="@dimen/default_margin"
                android:translationY="-2.32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_wishes"
                style="@style/custom_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingVertical="@dimen/default_margin"
                android:text="@string/wishes"
                android:textColor="@color/button_text_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dream_get" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_rcView_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start"
                android:text="@string/moments"
                android:textAppearance="@style/moments_chronicles"
                android:translationY="-0.53dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_wishes" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/list_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_moments"
                tools:listitem="@layout/item_photo2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_rcView_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start"
                android:text="@string/chronicles"
                android:textAppearance="@style/moments_chronicles"
                android:translationY="-0.53dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_moments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_chronicles"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_chronicles"
                app:spanCount="3"
                tools:itemCount="12"
                tools:listitem="@layout/item_chronicles" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
